--- a/PI/views/resultadoBusqueda.ejs
+++ b/PI/views/resultadoBusqueda.ejs
@@ -1,6 +1,6 @@
 <head>
     <link rel="stylesheet" href="/stylesheet/resultadoBusqueda.css">
-    <title><%= title %></title> 
+    <title>Resultado de busqueda</title> 
 </head>
 <header>
     <%-include('./partials/header')%>
@@ -9,7 +9,13 @@
     <div class="uk-section uk-section-small">
         <div class="uk-container uk-container-large uk-flex uk-flex-middle uk-flex-center">
            
-            <h2>(Mostar resultados de busqueda)</h2>
+         <div> <h1>Resultado de busqueda:</h1> </div> <br><br><br>
+         <div>
+           <ul>
+               <% for (let i = 0; i<resultados.length; i++) { %>
+                <li>  <a href="/info/detalleUsuario/<%= resultados[i].nombre %>"><%= resultados[i].nombre %></a> </li>  
+               <% } %>  
+           </ul></div>
 
         </div>
     </div>
