--- a/PI/views/partials/header.ejs
+++ b/PI/views/partials/header.ejs
@@ -40,10 +40,10 @@
                         <ul class="uk-flex uk-flex-between uk-flex-middle">
                             <li>
 
-                                <form action="/search" class="uk-search uk-search-default" method="GET">
+                                <form action="/search/" class="uk-search uk-search-default" method="GET">  <!-- formulario de busqueda -->
                                     <span uk-search-icon></span>
                                     <input type="search" name="search" class="uk-search-input" placeholder="Buscar..." value="">
-                                   
+                                  
                                 </form>
 
                             </li>
