--- a/PI/views/home.ejs
+++ b/PI/views/home.ejs
@@ -1,25 +1,27 @@
 <head>
     <link rel="stylesheet" href="/stylesheets/home.css">
-    <title><%= title %></title> 
+    <title>Home</title> 
   </head>
  <header>
     <%-include('./partials/header')%>
  </header>
  <body>
- <main>
+ <main> 
         <div class="uk-section uk-section-small" class="">
             <div class="uk-container uk-container-large uk-flex">
                 <section id="posts" class="uk-flex uk-flex-middle uk-flex-center uk-flex-column uk-child-width-1-2 uk-width-1-1">
                     <article class="post uk-card-default uk-flex uk-flex-column">
                         <div class="info-usuario uk-flex ">
+                            <% for (let i = 0; i<resultados.length; i++) { %>
                             <div>
-                                <img src="https://i.imgur.com/m6Zk8Fp.png" alt="">
+                                <img src="https://i.imgur.com/m6Zk8Fp.png\" alt="">
                             </div>
+                            
                             <h4>ortizlautaro</h4>
                             
                         </div>
                         <div class="post-body uk-flex uk-flex-center">
-                            <img src="https://i.imgur.com/4xEChYZ.png" alt="">
+                            <img src="<%= resultados[i].url_imagen  %>" alt="">
                         </div>
                         <div class="post-reacciones">
                             <ul class="post-icons uk-flex uk-flex-between">
@@ -57,7 +59,7 @@
                             
                         </div>
                         <div class="post-body uk-flex uk-flex-center">
-                            <img src="https://via.placeholder.com/500x600" alt="">
+                            <img src="<%= resultados[i].url_imagen  %>" alt="">
                         </div>
                         <div class="post-reacciones">
                             <ul class="post-icons uk-flex uk-flex-between">
@@ -95,7 +97,7 @@
                             
                         </div>
                         <div class="post-body uk-flex uk-flex-center">
-                            <img src="https://via.placeholder.com/500x600" alt="">
+                            <img src="<%= resultados[i].url_imagen  %>" alt="">
                         </div>
                         <div class="post-reacciones">
                             <ul class="post-icons uk-flex uk-flex-between">
@@ -133,7 +135,7 @@
                             
                         </div>
                         <div class="post-body uk-flex uk-flex-center">
-                            <img src="https://via.placeholder.com/500x600" alt="">
+                            <img src="<%= resultados[i].url_imagen  %>" alt="">
                         </div>
                         <div class="post-reacciones">
                             <ul class="post-icons uk-flex uk-flex-between">
@@ -171,7 +173,7 @@
                             
                         </div>
                         <div class="post-body uk-flex uk-flex-center">
-                            <img src="https://via.placeholder.com/500x600" alt="">
+                            <img src="<%= resultados[i].url_imagen  %>" alt="">
                         </div>
                         <div class="post-reacciones">
                             <ul class="post-icons uk-flex uk-flex-between">
@@ -209,7 +211,7 @@
                             
                         </div>
                         <div class="post-body uk-flex uk-flex-center">
-                            <img src="https://via.placeholder.com/500x600" alt="">
+                            <img src="<%= resultados[i].url_imagen  %>" alt="">
                         </div>
                         <div class="post-reacciones">
                             <ul class="post-icons uk-flex uk-flex-between">
@@ -247,7 +249,7 @@
                             
                         </div>
                         <div class="post-body uk-flex uk-flex-center">
-                            <img src="https://via.placeholder.com/500x600" alt="">
+                            <img src="<%= resultados[i].url_imagen  %>" alt="">
                         </div>
                         <div class="post-reacciones">
                             <ul class="post-icons uk-flex uk-flex-between">
@@ -295,7 +297,7 @@
                         
                     </div>
                     <div class="post-body uk-flex uk-flex-center">
-                        <img src="https://via.placeholder.com/500x600" alt="">
+                        <img src="<%= resultados[i].url_imagen  %>" alt="">
                     </div>
                     <div class="post-reacciones">
                         <ul class="post-icons uk-flex uk-flex-between">
@@ -333,7 +335,7 @@
                         
                     </div>
                     <div class="post-body uk-flex uk-flex-center">
-                        <img src="https://via.placeholder.com/500x600" alt="">
+                        <img src="<%= resultados[i].url_imagen  %>" alt="">
                     </div>
                     <div class="post-reacciones">
                         <ul class="post-icons uk-flex uk-flex-between">
@@ -371,7 +373,7 @@
                         
                     </div>
                     <div class="post-body uk-flex uk-flex-center">
-                        <img src="https://via.placeholder.com/500x600" alt="">
+                        <img src="<%= resultados[i].url_imagen  %>" alt="">
                     </div>
                     <div class="post-reacciones">
                         <ul class="post-icons uk-flex uk-flex-between">
@@ -409,7 +411,7 @@
                         
                     </div>
                     <div class="post-body uk-flex uk-flex-center">
-                        <img src="https://via.placeholder.com/500x600" alt="">
+                        <img src="<%= resultados[i].url_imagen  %>" alt="">
                     </div>
                     <div class="post-reacciones">
                         <ul class="post-icons uk-flex uk-flex-between">
@@ -447,7 +449,7 @@
                         
                     </div>
                     <div class="post-body uk-flex uk-flex-center">
-                        <img src="https://via.placeholder.com/500x600" alt="">
+                        <img src="<%= resultados[i].url_imagen  %>" alt="">
                     </div>
                     <div class="post-reacciones">
                         <ul class="post-icons uk-flex uk-flex-between">
@@ -485,7 +487,7 @@
                         
                     </div>
                     <div class="post-body uk-flex uk-flex-center">
-                        <img src="https://via.placeholder.com/500x600" alt="">
+                        <img src="<%= resultados[i].url_imagen  %>" alt="">
                     </div>
                     <div class="post-reacciones">
                         <ul class="post-icons uk-flex uk-flex-between">
@@ -523,7 +525,7 @@
                         
                     </div>
                     <div class="post-body uk-flex uk-flex-center">
-                        <img src="https://via.placeholder.com/500x600" alt="">
+                        <img src="<%= resultados[i].url_imagen  %>" alt="">
                     </div>
                     <div class="post-reacciones">
                         <ul class="post-icons uk-flex uk-flex-between">
@@ -554,7 +556,7 @@
                 </article>
     
             </section>
-
+        <% } %>
         </div>
     </div>
 </main>
