--- a/PI/views/login.ejs
+++ b/PI/views/login.ejs
@@ -1,6 +1,6 @@
 <head>
     <link rel="stylesheet" href="/stylesheet/login.css">
-    <title><%= title %></title> 
+    <title>Login</title> 
 </head>
 <header>
     <%-include('./partials/header')%>
