--- a/PI/views/resultadoBusqueda.ejs
+++ b/PI/views/resultadoBusqueda.ejs
@@ -14,7 +14,7 @@
            <ul>
                <% for (let i = 0; i<resultados.length; i++) { %> 
                 <li>  
-                    <a href="/esp/<%=resultados[i].id %>"><%= resultados[i].nombre %></a>  
+                    <a href="/info/esp/<%=user[i].id %>"><%= resultados[i].nombre %></a>  
                 </li> 
                <% } %>  
            </ul></div>
