--- a/PI/views/detalleUsuario.ejs
+++ b/PI/views/detalleUsuario.ejs
@@ -32,49 +32,22 @@
                 </div>
                 
            </section>
-
            <section class="muro uk-flex uk-flex-middle uk-flex-center">
+                <%for (let x = 0; x<resultados.post.length; x++) { %>
                 <div class="uk-grid uk-child-width-1-3 uk-width-1-1 uk-margin-remove" uk-grid>
                     <div class="uk-card uk-card-hover uk-card-body uk-flex uk-flex-column uk-flex-middle uk-flex-center ">
-                        <a href="http://localhost:3000/post/detalle" class="link-detalle">
-                            <img src="https://via.placeholder.com/200" alt="foto de perfil" class="foto-perfil">
-                            <p class="uk-text-center">Lorem ipsum</p>
+                        <a href="/post/detalle/<%=resultados.post[x].id %>" class="link-detalle">
+                            <img src=" <%= resultados.post[x].url_imagen%>" alt="foto de perfil" class="foto-perfil">
+                            <p class="uk-text-center"><%= resultados.post[x].texto%></p>
                         </a>
                     </div>
-                    <div class="uk-card uk-card-hover uk-card-body uk-flex uk-flex-column uk-flex-middle uk-flex-center ">
-                        <a href="http://localhost:3000/post/detalle" class="link-detalle">
-                            <img src="https://via.placeholder.com/200" alt="foto de perfil" class="foto-perfil">
-                            <p class="uk-text-center">Lorem ipsum</p>
-                        </a>
-                    </div>
-                    <div class="uk-card uk-card-hover uk-card-body uk-flex uk-flex-column uk-flex-middle uk-flex-center ">
-                        <a href="http://localhost:3000/post/detalle" class="link-detalle">
-                            <img src="https://via.placeholder.com/200" alt="foto de perfil" class="foto-perfil">
-                            <p class="uk-text-center">Lorem ipsum</p>
-                        </a>
-                    </div>
-                    <div class="uk-card uk-card-hover uk-card-body uk-flex uk-flex-column uk-flex-middle uk-flex-center ">
-                        <a href="http://localhost:3000/post/detalle" class="link-detalle">
-                            <img src="https://via.placeholder.com/200" alt="foto de perfil" class="foto-perfil">
-                            <p class="uk-text-center">Lorem ipsum</p>
-                        </a>
-                    </div>
-                    <div class="uk-card uk-card-hover uk-card-body uk-flex uk-flex-column uk-flex-middle uk-flex-center ">
-                        <a href="http://localhost:3000/post/detalle" class="link-detalle">
-                            <img src="https://via.placeholder.com/200" alt="foto de perfil" class="foto-perfil">
-                            <p class="uk-text-center">Lorem ipsum</p>
-                        </a>
-                    </div>
-                    <div class="uk-card uk-card-hover uk-card-body uk-flex uk-flex-column uk-flex-middle uk-flex-center ">
-                        <a href="http://localhost:3000/post/detalle" class="link-detalle">
-                            <img src="https://via.placeholder.com/200" alt="foto de perfil" class="foto-perfil">
-                            <p class="uk-text-center">Lorem ipsum</p>
-                        </a>
-                    </div>
+                    
                 
                   
                     
                 </div>
+            <% } %>
+
            </section>
         </div>
     </div>
