--- a/PI/views/detalleUsuario.ejs
+++ b/PI/views/detalleUsuario.ejs
@@ -33,8 +33,8 @@
                 
            </section>
            <section class="muro uk-flex uk-flex-middle uk-flex-center">
-                <%for (let x = 0; x<resultados.post.length; x++) { %>
-                <div class="uk-grid uk-child-width-1-3 uk-width-1-1 uk-margin-remove" uk-grid>
+               
+                <div class="uk-grid uk-child-width-1-3 uk-width-1-1 uk-margin-remove" uk-grid> <%for (let x = 0; x<resultados.post.length; x++) { %>
                     <div class="uk-card uk-card-hover uk-card-body uk-flex uk-flex-column uk-flex-middle uk-flex-center ">
                         <a href="/post/detalle/<%=resultados.post[x].id %>" class="link-detalle">
                             <img src=" <%= resultados.post[x].url_imagen%>" alt="foto de perfil" class="foto-perfil">
@@ -43,11 +43,11 @@
                     </div>
                     
                 
-                  
+                  <% } %>
+
                     
                 </div>
-            <% } %>
-
+            
            </section>
         </div>
     </div>
