--- a/PI/views/home.ejs
+++ b/PI/views/home.ejs
@@ -11,8 +11,9 @@
             <div class="uk-container uk-container-large uk-flex">
                 <section id="posts" class="uk-flex uk-flex-middle uk-flex-center uk-flex-column uk-child-width-1-2 uk-width-1-1">
                     <article class="post uk-card-default uk-flex uk-flex-column">
-                        <div class="info-usuario uk-flex ">
-                            <% for (let i = 0; i<resultados.length; i++) { %>
+                        <% for (let i = 0; i<resultados.length; i++) { %>
+                             <div class="info-usuario uk-flex ">
+                           
                             <div>
                                 <img src="https://i.imgur.com/m6Zk8Fp.png\" alt="">
                             </div>
@@ -36,22 +37,23 @@
                             </div>
                         </div>
                         <div class="post-comentarios">
-                            <h6>Comentarios</h6>
+                            <h6>Comentarios</h6> 
+                            <ul>
                             <% if (resultados[i].comments.length != 0) {
                                 for (let x = 0; x<resultados[i].comments.length; x++) { %>
-                            <ul>
+                           
                                 <li>
-                                    <a href="/info/esp/<%=resultados[i].user_id %>"><%= resultados[i].comments[x].user_id %> </a>
+                                    <a href="/info/esp/<%=resultados[i].user_id %>"><%= resultados[i].comments[x].user.nombre%> </a>
                                     <p><%=resultados[i].comments[x].comentario %></p>
                                 </li>
                                 <% } } %>
                                 <a href="post/detalle/<%=resultados[i].id %>">Ver más...</a>
-                            </ul>
+                           
                             
-                            <% } %>
-                      
+                            
+                       </ul>
                         </div>
-                       
+                       <% } %>
                     </article> 
                     
             </section>
