--- a/PI/views/login.ejs
+++ b/PI/views/login.ejs
@@ -9,15 +9,15 @@
     <main>
         <div class="uk-section uk-section-small">
             <div class="uk-container uk-container-large uk-flex uk-flex-middle uk-flex-center">
-                <form action="">
+                <form action="/ingreso/login"  method="POST">
 
 
                     <h2>Logeate!<h2>
                     <form action="">
-                    <label for="login">Nombre de usuario:</label><br>
-                    <input type="text" required="required"><br>
+                    <label for="login">Email:</label><br>
+                    <input type="email" name="email" required="required"><br>
                     <label for="login">Contraseña:</label><br>
-                    <input type="text" required="required"><br>
+                    <input type="password" name="contrasena" required="required"><br>
                     <br><input type="submit">
 
 
