--- a/PI/views/home.ejs
+++ b/PI/views/home.ejs
@@ -6,15 +6,16 @@
     <%-include('./partials/header')%>
  </header>
  <body>
- <main> 
+ <main>   <% for (let i = 0; i<resultados.length; i++) { %> 
         <div class="uk-section uk-section-small" class="">
             <div class="uk-container uk-container-large uk-flex">
                 <section id="posts" class="uk-flex uk-flex-middle uk-flex-center uk-flex-column uk-child-width-1-2 uk-width-1-1">
                     <article class="post uk-card-default uk-flex uk-flex-column">
-                        <% for (let i = 0; i<resultados.length; i++) { %>
+                     
                              <div class="info-usuario uk-flex ">
                            
                             <div>
+                                 
                                 <img src="https://i.imgur.com/m6Zk8Fp.png\" alt="">
                             </div>
                             
@@ -43,7 +44,7 @@
                                 for (let x = 0; x<resultados[i].comments.length; x++) { %>
                            
                                 <li>
-                                    <a href="/info/esp/<%=resultados[i].user_id %>"><%= resultados[i].comments[x].user.nombre%> </a>
+                                    <a href="/info/esp/<%=resultados[i].user_id %>"><%= resultados[i].comments[x].user.username%> </a>
                                     <p><%=resultados[i].comments[x].comentario %></p>
                                 </li>
                                 <% } } %>
@@ -51,14 +52,14 @@
                            
                             
                             
-                       </ul>
+                       </ul>  
                         </div>
-                       <% } %>
+                     
                     </article> 
                     
             </section>
         </div>
-    </div>
+    </div><% } %>   
 </main>
 <footer>
     <%-include('./partials/footer')%>
