--- a/PI/views/miPerfil.ejs
+++ b/PI/views/miPerfil.ejs
@@ -1,6 +1,6 @@
 <head>
     <link rel="stylesheet" href="/stylesheet/miPerfil.css">
-    <title><%= title %></title> 
+    <title>Mi perfil</title> 
 </head>
 <header>
     <%-include('./partials/header')%>
@@ -14,7 +14,9 @@
                 </div>
                 <div class="uk-width-2-3 uk-flex uk-flex-column uk-flex-around">
                     <div class="uk-flex uk-flex-middle">
-                        <h3 class="uk-margin-remove">Lautaro Ortiz</h3>
+                       
+                    <h3 class="uk-margin-remove"> <%= %></h3>
+                      
                         <a href="" uk-icon="icon:cog; ratio: 1.2" class="uk-margin-left"></a>
                     </div>
                     <div class="lema">
