--- a/PI/views/miPerfil.ejs
+++ b/PI/views/miPerfil.ejs
@@ -14,9 +14,9 @@
                 </div>
                 <div class="uk-width-2-3 uk-flex uk-flex-column uk-flex-around">
                     <div class="uk-flex uk-flex-middle">
-                       
-                    <h3 class="uk-margin-remove"> <%= %></h3>
-                      
+                       <% if (locals.user){%> 
+                        <h3 class="uk-margin-remove"> <%= locals.user.nombre %></h3>
+                       <% } %> 
                         <a href="" uk-icon="icon:cog; ratio: 1.2" class="uk-margin-left"></a>
                     </div>
                     <div class="lema">
