--- a/PI/views/login.ejs
+++ b/PI/views/login.ejs
@@ -18,6 +18,7 @@
                     <input type="email" name="email" required="required"><br>
                     <label for="login">Contraseña:</label><br>
                     <input type="password" name="contrasena" required="required"><br>
+                   Recordar <input type="checkbox" name="rememberme" >
                     <br><input type="submit">
 
 
