--- a/PI/views/miPerfil.ejs
+++ b/PI/views/miPerfil.ejs
@@ -8,21 +8,25 @@
 <main>
     <div class="uk-section uk-section-small">
         <div class="uk-container uk-container-small">
+             <% if (locals.user){%>
             <section class="info-usuario uk-flex uk-flex-around uk-width-1-1">
                 <div class="uk-width-1-3 uk-flex uk-flex-center uk-flex-middle">
-                    <img src="https://i.imgur.com/LbthCty.png" alt="foto de perfil" class="foto-perfil">
+                    <img src="" alt="foto de perfil" class="foto-perfil">
                 </div>
                 <div class="uk-width-2-3 uk-flex uk-flex-column uk-flex-around">
                     <div class="uk-flex uk-flex-middle">
-                       <% if (locals.user){%> 
-                        <h3 class="uk-margin-remove"> <%= locals.user.nombre %></h3>
-                       <% } %> 
+                       
+                        <h3 class="uk-margin-remove"> <%= locals.user.nombre + " " + locals.user.nombre%>  </h3>
+                        
+                     
                         <a href="" uk-icon="icon:cog; ratio: 1.2" class="uk-margin-left"></a>
                     </div>
+                    <h4 class="uk-margin-remove"> <%= locals.user.username%>  </h4>
                     <div class="lema">
-                        <p>
-                        Buenos días
-                        </p>
+                        
+                            <p> <%= locals.user.lema %></p>
+                        
+                        
                     </div>
                     <div>
                         <ul class="red-usuario uk-flex uk-flex-between uk-width-1-2" id="datos">
@@ -32,58 +36,23 @@
                         </ul>
                     </div>
                 </div>
-
+             
             </section>
 
             <section class="muro uk-flex uk-flex-middle uk-flex-center">
                 <div class="uk-grid uk-child-width-1-3 uk-width-1-1 uk-margin-remove" uk-grid>
+                    
                     <div
                         class="uk-card uk-card-hover uk-card-body uk-flex uk-flex-column uk-flex-middle uk-flex-center ">
-                        <a href="http://localhost:3000/post/detalle" class="link-detalle">
-                            <img src="https://i.imgur.com/vBYh2Hc.png" alt="foto de perfil" class="foto-perfil">
-                            <p class="uk-text-center">Los pibes en BRC</p>
+                        <a href="/post/detalle/" class="link-detalle">
+                            <img src="" alt="" class="foto-perfil">
+                            <p class="uk-text-center"></p>
                         </a>
                     </div>
-                    <div
-                        class="uk-card uk-card-hover uk-card-body uk-flex uk-flex-column uk-flex-middle uk-flex-center ">
-                        <a href="http://localhost:3000/post/detalle" class="link-detalle">
-                            <img src="https://i.imgur.com/ro7oceb.png" alt="foto de perfil" class="foto-perfil">
-                            <p class="uk-text-center">Las montañas</p>
-                        </a>
-                    </div>
-                    <div
-                        class="uk-card uk-card-hover uk-card-body uk-flex uk-flex-column uk-flex-middle uk-flex-center ">
-                        <a href="http://localhost:3000/post/detalle" class="link-detalle">
-                            <img src="https://i.imgur.com/ugQWkRY.png" alt="foto de perfil" class="foto-perfil">
-                            <p class="uk-text-center">Explorando</p>
-                        </a>
-                    </div>
-                    <div
-                        class="uk-card uk-card-hover uk-card-body uk-flex uk-flex-column uk-flex-middle uk-flex-center ">
-                        <a href="http://localhost:3000/post/detalle" class="link-detalle">
-                            <img src="https://i.imgur.com/0O3Aor4.png" alt="foto de perfil" class="foto-perfil">
-                            <p class="uk-text-center">Amigazo</p>
-                        </a>
-                    </div>
-                    <div
-                        class="uk-card uk-card-hover uk-card-body uk-flex uk-flex-column uk-flex-middle uk-flex-center ">
-                        <a href="http://localhost:3000/post/detalle" class="link-detalle">
-                            <img src="https://i.imgur.com/HQQncPo.png" alt="foto de perfil" class="foto-perfil">
-                            <p class="uk-text-center">:)</p>
-                        </a>
-                    </div>
-                    <div
-                        class="uk-card uk-card-hover uk-card-body uk-flex uk-flex-column uk-flex-middle uk-flex-center ">
-                        <a href="http://localhost:3000/post/detalle" class="link-detalle">
-                            <img src="https://i.imgur.com/Sg0wjgo.png" alt="foto de perfil" class="foto-perfil">
-                            <p class="uk-text-center">nightlife</p>
-                        </a>
-                    </div>
-
-
-
-                </div>
+               </div>
+               <% } %>
             </section>
+           
         </div>
     </div>
 
