--- a/PI/views/resultadoBusquedaH.ejs
+++ b/PI/views/resultadoBusquedaH.ejs
@@ -21,7 +21,7 @@
                      <%  } else if(resultados) {%>  
                         <% for (let i = 0; i<resultados.length; i++) { %>
                          <li>   
-                        <a href="/info/esp/<%=resultados[i].id %>"><%= resultados[i].nombre %></a>  
+                        <a href="/post/detalle/<%=resultados[i].post_id %>"><%= resultados[i].comentario %></a>  
                      <% } %> 
                      <% } %> 
                     </li> 
