--- a/PI/public/stylesheets/header.css
+++ b/PI/public/stylesheets/header.css
@@ -1,6 +1,9 @@
 /* FONTS */
 @import url('https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap');
 /* FONTS */
+.bienvenido{
+    margin-left: 150px;
+}
 
 #indice {
     font-family: sans-serif;
