--- a/PI/views/home.ejs
+++ b/PI/views/home.ejs
@@ -1,68 +1,58 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <link rel="stylesheet" href="/stylesheets/home.css">
-    <title>Home</title> 
-  </head>
- <header>
-    <%-include('./partials/header')%>
- </header>
- <body>
- <main>   <% for (let i = 0; i<resultados.length; i++) { %> 
-        <div class="uk-section uk-section-small" class="">
-            <div class="uk-container uk-container-large uk-flex">
-                <section id="posts" class="uk-flex uk-flex-middle uk-flex-center uk-flex-column uk-child-width-1-2 uk-width-1-1">
-                    <article class="post uk-card-default uk-flex uk-flex-column">
-                     
-                             <div class="info-usuario uk-flex ">
-                           
-                            <div>
-                                 
-                                <img src="https://i.imgur.com/m6Zk8Fp.png\" alt="">
-                            </div>
-                            
-                            <h4><a href="/info/esp/<%=resultados[i].user_id %>"><%= resultados[i].user.username%></a></h4>
-                            
-                        </div>
-                        <div class="post-body uk-flex uk-flex-center">
-                            <img src="<%= resultados[i].url_imagen  %>" alt="">
-                        </div>
-                        <div class="post-reacciones">
-                            <ul class="post-icons uk-flex uk-flex-between">
-                                <li><span class="" uk-icon="icon:heart; ratio: 1.3"></span>
-                                </li>
-                                <li><span class="" uk-icon="icon:comments; ratio: 1.3"></span>
-                                </li>
-                            </ul>
-                            <div class="post-pie uk-flex">
-                                <h5 class="uk-width-1-6"><%= resultados[i].user.username %></h5>
-                                <p class="uk-width-5-6"><%= resultados[i].texto %></p>
-                            </div>
-                        </div>
-                        <div class="post-comentarios">
-                            <h6>Comentarios</h6> 
-                            <ul>
-                            <% if (resultados[i].comments.length != 0) {
-                                for (let x = 0; x<resultados[i].comments.length; x++) { %>
-                           
-                                <li>
-                                    <a href="/info/esp/<%=resultados[i].comments[x].user_id %>"><%= resultados[i].comments[x].user.username%> </a>
-                                    <p><%=resultados[i].comments[x].comentario %></p>
-                                </li>
-                                <% } } %>
-                                <a href="post/detalle/<%=resultados[i].id %>">Ver más...</a>
-                           
-                            
-                            
-                       </ul>  
-                        </div>
-                     
-                    </article> 
-                    
-            </section>
-        </div>
-    </div><% } %>   
-</main>
-<footer>
-    <%-include('./partials/footer')%>
-</footer>
+     <!-- UIkit CSS -->
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.5.5/dist/css/uikit.min.css" />
+    <!-- UIkit JS -->
 
-</body>
+     <!-- UIkit JS -->
+     <script src="https://cdn.jsdelivr.net/npm/uikit@3.5.5/dist/js/uikit.min.js"></script>
+     <script src="https://cdn.jsdelivr.net/npm/uikit@3.5.5/dist/js/uikit-icons.min.js"></script>
+    <!-- UIkit JS -->
+     
+     <!-- Kit modo oscuro -->
+    <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
+     <!-- Kit modo oscuro -->
+
+     <link rel="stylesheet" href="/stylesheets/futuroHome.css">
+    <link rel="stylesheet" href="/stylesheets/header.css">
+    
+    </head>
+    <body>
+        <header class="uk-background-primary">
+            <section class=" uk-container uk-container-large">
+                <div class="">
+                    <nav class="" uk-navbar>
+                        <div class="uk-navbar-left">
+                           <h2 class="logo"><a href="/">Acqua</a></h2>
+                        </div>
+                    </nav>
+                </div>
+            </section>
+        </header>
+        <main > 
+            <div class="titulo">
+            <h1>Conectate con tus amigos</h1>
+      </div>
+        <br>
+        <br>
+            <div class="todo" >
+             <div class="l">
+                 <a href="ingreso/login">
+            <h2>
+                Iniciar sesion
+            </h2>
+        </a>
+        </div>
+        <div class="r">
+            <a href="ingreso/registro">
+                <h2>
+                Registrarse
+            </h2></a>
+        </div>
+           </div>
+           
+        
+    </main>
+      
+        </body>
