--- a/PI/views/registracion.ejs
+++ b/PI/views/registracion.ejs
@@ -9,8 +9,14 @@
     <div class="uk-section uk-section-small">
         <div class="uk-container uk-container-large uk-flex uk-flex-middle uk-flex-center">
             <form action="/ingreso/registro" method="POST">
-                <!-- EN TABLA ESTA DEMAS LA EDAD Y EL LEMA???? Y LA CONTRASENA -->
+                
+                
                 <h2>Formulario de registración</h2>
+                <% if ( mensaje != false) { %>
+                <h4 style="color:red;"> <%= mensaje %> </h4>
+                <% } else {%>
+                <% } %>
+                
                 <label for="nombre">Nombre:</label><br>
                 <input type="text" name="nombre" id="nombre" placeholder="Lautaro" required="required"><br>
                 <label for="apellido">Apellido:</label><br>
@@ -24,15 +30,6 @@
                 <input type="text" name="username" id="username" placeholder="ortizlautaro" required="required"><br>
                 <label for="apodo">Lema:</label><br>
                 <input type="text" name="lema" id="lema" placeholder="Pon un lema"><br>
-            
-            
-                     <!-- <label for="genero" name="genero" id= "genero">Género:</label><br>
-                    <input type="radio" id="hombre" name="genero" value="hombre">
-                    <label for="hombre">Hombre</label><br>
-                    <input type="radio" id="mujer" name="genero" value="mujer">
-                    <label for="mujer">Mujer</label><br>
-                    <input type="radio" id="otro" name="genero" value="otro">
-                    <label for="otro">Otro</label><br>  -->
 
                     <label for="cumpleanos">Fecha de nacimiento:</label><br>
                     <input type="date" required="required" name="cumpleanos"><br>
