primer intento contraseña

--- a/PI/views/login.ejs
+++ b/PI/views/login.ejs
@@ -19,7 +19,10 @@
                     <label for="login">Contraseña:</label><br>
                     <input type="password" name="contrasena" required="required"><br>
                    Recordar <input type="checkbox" name="rememberme" >
-                    <br><input type="submit">
+                    <br><input type="submit"><br>
+
+                    <label for="olvide">Olvidé mi contraseña</label><br>
+                    <input type="button" value="Reiniciar contraseña">
 
 
 
