editar perfil, se rompio todo pero va quedando el código creo. NO PULLEES hasta nuevo aviso

--- a/PI/views/miPerfil.ejs
+++ b/PI/views/miPerfil.ejs
@@ -17,7 +17,9 @@
                     <div class="uk-flex uk-flex-middle">
                        
                         <h3 class="uk-margin-remove"> <%= locals.user.nombre + " " + locals.user.nombre%>  </h3>
-                        
+                        <form action="/info/editarPerfil" method="GET">
+                        <button type="submit">Editar Perfil</button>
+                        </form>
                      
                         
                     </div>
