actualice form de editar perfil - ver de agregar funcionalidad de links en el perfil

--- a/PI/views/perfilEdit.ejs
+++ b/PI/views/perfilEdit.ejs
@@ -15,6 +15,12 @@
                     <input type="file" name="url_imagen" id=""><br>
                     <label for="texto">Nombre</label><br> 
                         <input type="text" name="texto"><br>
+                        <label for="texto">Nombre de usuario</label><br> 
+                        <input type="text" name="texto"><br>
+                        <label for="texto">Lema</label><br> 
+                        <input type="text" name="texto"><br>
+                        <label for="texto">Link</label><br> 
+                        <input type="url" name="texto"><br>
                 <button type="submit">Guardar</button>
                 </form>
 
