--- a/PI/views/detallePost.ejs
+++ b/PI/views/detallePost.ejs
@@ -45,6 +45,11 @@
                           <input type="text" class="uk-input" placeholder="Agregar comentario"> 
                           <button class="uk-button uk-button-primary uk-margin-small-top" type="submit">Comentar</button>
                         </form>
+
+                        <form action="/post/detalle/<%= resultados.id %>" method="POST">
+                        <button type="submit">Borrar Post</button>
+                            </form>
+
                     </div> 
                       
                 </article>
