terminando editar post

--- a/PI/views/postEdit.ejs
+++ b/PI/views/postEdit.ejs
@@ -9,7 +9,7 @@
     <main>
         <div class="uk-section uk-section-small">
             <div class="uk-container uk-container-large uk-flex">
-                <form action="/info/editarPerfil" method="POST">
+                <form action="/post/edit/<%= post.id %> " method="POST">
 
                     <h2>Edita tu post!</h2>
 
