olvide pw inicio de nuevo

--- a/PI/views/home.ejs
+++ b/PI/views/home.ejs
@@ -50,7 +50,15 @@
                 Registrarse
             </h2></a>
         </div>
+        <div class="r">
+            <a href="ingreso/registro">
+                <h2>
+                Olvidé mi contraseña
+            </h2></a>
+        </div>
            </div>
+           </div>
+           
            
         
     </main>
