render olvide contrasena

--- a/PI/views/home.ejs
+++ b/PI/views/home.ejs
@@ -51,7 +51,7 @@
             </h2></a>
         </div>
         <div class="r">
-            <a href="ingreso/registro">
+            <a href="ingreso/olvidePw">
                 <h2>
                 Olvidé mi contraseña
             </h2></a>
