--- a/PI/views/partials/header.ejs
+++ b/PI/views/partials/header.ejs
@@ -74,7 +74,9 @@
                     </div>
                     
                     <form action="/ingreso/logout" method="POST">
-                    <button type="submit">Logout</button>
+                    <button type="submit" class="logout">
+                      <img src="/images/flecha.png" width="25px">
+                    </button>
                     </form>
                     <% } %>
                 </nav>
