--- a/PI/public/stylesheets/header.css
+++ b/PI/public/stylesheets/header.css
@@ -4,7 +4,14 @@
 .bienvenido{
     margin-left: 150px;
 }
+.logout{
+    margin-left: 60px;
+    background-color: #04ACC1;
+    border: 0px;
+    margin-top: 5px;
+    margin-right: -30px;
 
+}
 #indice {
     font-family: sans-serif;
 }
