--- a/PI/views/feed.ejs
+++ b/PI/views/feed.ejs
@@ -16,7 +16,7 @@
                            
                             <div>
                                  
-                                <img src="https://i.imgur.com/m6Zk8Fp.png\" alt="">
+                                <img src="<%= resultados[i].user.perfil  %>" width="100px">
                             </div>
                             
                             <h4><a href="/info/esp/<%=resultados[i].user_id %>"><%= resultados[i].user.username%></a></h4>
